<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.laboratorio03.MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" />
    
    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:columnCount="4"
        android:rowCount="4" >

        <Button
            android:id="@+id/button1"
            android:layout_gravity="left"
            android:text="@string/botao1" />
        <Button
            android:id="@+id/button2"
            android:layout_gravity="bottom"
            android:text="@string/botao2" />
		<Button
            android:id="@+id/button3"
            android:layout_gravity="left"
            android:text="@string/botao3" />
		<Button
		    android:id="@+id/button4"
		    android:layout_gravity="bottom"
		    android:text="@string/adicao" />		
		 <Button
            android:id="@+id/button5"
            android:layout_gravity="left"
            android:text="@string/botao4" />
        <Button
            android:id="@+id/button6"
            android:layout_gravity="bottom"
            android:text="@string/botao5" />
		<Button
            android:id="@+id/button7"
            android:layout_gravity="left"
            android:text="@string/botao6" />
		<Button
		    android:id="@+id/button8"
		    android:layout_gravity="bottom"
		    android:text="@string/subtracao" />
		   <Button
            android:id="@+id/button9"
            android:layout_gravity="left"
            android:text="@string/botao7" />
        <Button
            android:id="@+id/button10"
            android:layout_gravity="bottom"
            android:text="@string/botao8" />
		<Button
            android:id="@+id/button11"
            android:layout_gravity="left"
            android:text="@string/botao9" />
		<Button
		    android:id="@+id/button12"
		    android:layout_gravity="bottom"
		    android:text="@string/multiplicacao" />		
		 <Button
            android:id="@+id/button14"
            android:layout_gravity="left"
            android:layout_column="1"
            android:text="@string/botao0" />
        <Button
            android:id="@+id/button16"
            android:layout_gravity="bottom"
            android:layout_column="3"
            android:text="@string/divisao" />


    </GridLayout>

</RelativeLayout>